# OpenCV-Chroma-Key

./: CMakeLists.txt  README.md  README.txt
src/: alphaBlending.cpp  alphaBlending.h  backgroundExtractor.cpp  backgroundExtractor.h  foregroundExtractor.cpp  foregroundExtractor.h  main.cpp  tools.cpp  tools.h
